k8s-pdn/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: http
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`proxy.eden.eoscommunity.org`)
    services:
    - kind: Service
      name: edenproxy
      port: 3000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: https
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`proxy.eden.eoscommunity.org`)
    services:
    - kind: Service
      name: edenproxy
      port: 3000
  tls:
    secretName: tls-secret
